--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "reset";
 @import "modules/products";
 @import "modules/users";
+@import "modules/new_products";
 @import "font-awesome-sprockets";
 @import "font-awesome";
