--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -1,3 +1,208 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+  box-sizing: border-box;
+}
+.label{
+  font-weight: 600;
+}
+
+.Single-container{
+  position: relative;
+  min-height: 100%;
+  font-size: 14px;
+  color: #333;
+  background: #f5f5f5;
+  line-height: 1;
+  .Single-header{
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    .logo{
+      margin: 40px 0 0;
+      width: 185px;
+      height: 49px;
+      line-height: 49px;
+    }
+  }
+  .Signup-bar{
+    padding: 40px 0 0 44px;
+    border: 0;
+    .clearfix{
+      margin: 0;
+      width: 270px;
+      display: flex;
+      justify-content: space-between;
+      .active{
+        font-weight: 600;
+        color: #3CCACE;
+        .progress-status{
+          width: 12px;
+          height: 12px;
+          margin: 8px auto 0;
+          background: #3CCACE;
+          border-radius: 50%;
+        }
+      }
+      .active-none{
+      font-weight: 600;
+      color: #888;
+      .progress-status-none{
+        width: 12px;
+        height: 12px;
+        margin: 8px auto 0;
+        background: #DDDDDD;
+        border-radius: 50%;
+      }
+      }
+    }
+  }
+  .Single{
+    display: block;
+    &__main{
+      width: 700px;
+      margin: 0 auto;
+      background-color: white;
+      &__container{
+        font-size: 22px;
+        padding: 32px;
+        text-align: center;
+        border-bottom: 1px solid #EEEEEE;
+      } 
+      .Form-container{
+        padding: 24px 16px 40px;
+        .Form{
+          max-width: 343px;
+          margin: 0 auto;
+          &__group{
+            margin: 24px 0 0;
+            .form-require{
+              margin: 0 0 0 8px;
+              padding: 2px 4px;
+              background: #3CCACE;
+              border-radius: 2px;
+              color: #fff;
+              font-size: 12px;
+            }
+            .form-enquire{
+              margin: 0 0 0 8px;
+              padding: 2px 4px;
+              background: #ccc;
+              border-radius: 2px;
+              color: #fff;
+              font-size: 12px;
+            }
+            .input-default{
+              width: 100%;
+              margin: 8px 0 8px 0;
+              height: 48px;
+              padding: 10px 16px 8px;
+              border-radius: 4px;
+              border: 1px solid #ccc;
+              background: #fff;
+              line-height: 1.5;
+              font-size: 16px;
+            }
+            .form-info-text{
+              margin: 8px 0 0;
+              line-height: 1.5;
+              color: #888;
+            }
+            .text-left{
+              font-size: 16px;
+            }
+            .l-single-text{
+              margin: 8px 0 0;
+            }
+            .form-name{
+              display: flex;
+              justify-content: space-between;
+              margin: 8px 0 8px 0;
+              .input-default-half{
+                width: calc(50% - 6px);
+                height: 48px;
+                padding: 10px 16px 8px;
+                border: 1px solid #ccc;
+                background: #fff;
+                line-height: 1.5;
+                font-size: 16px;
+              }
+            }
+            .birthday-select{
+              height: 60px;
+              padding: 10px 8px 8px 0px;
+              display: flex;
+              .select-wrap{
+                width: 76px;
+                height: 30px;
+                select{
+                  height: 48px;
+                  width: 80px;
+                  border: 1px solid #ccc;
+                  padding: 0 10px;
+                }
+              }
+              span{
+                margin: 18px 10px 0px 10px;
+              }
+            }
+            .has-error-text{
+              color: #888;
+            }
+          }
+          &__complete{
+            padding-bottom: 40px;
+            font-size: 16px;
+            display: flex;
+            justify-content: center;
+          }
+        }
+        .l-single-content{
+          display: flex;
+          justify-content: center;
+          margin-top: 10px;
+          button{
+            background: #3CCACE;
+            border: 1px solid #3CCACE;
+            color: #fff;
+            height: 60px;
+            width: 343px;
+            margin: 0 auto;
+            border-radius: 6px;
+          }
+          .nav-link{
+            background: #3CCACE;
+            color: #fff;
+            height: 60px;
+            width: 343px;
+            margin: 10px 0 20px;
+            border-radius: 6px;
+            font-size: 20px;
+            text-decoration: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
+        .image{
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+  }
+  .single-footer{
+    padding: 30px 0;
+    .single-footer-logo{
+      display: flex;
+      justify-content: center;
+      .logo-white{
+        width: 120px;
+        height: 60px;
+      }
+    }
+    .small{
+      display: flex;
+      justify-content: center;
+      color: #888;
+    }
+  }
+}
