ユーザー登録ページ

--- a/app/views/users/create.html.haml
+++ b/app/views/users/create.html.haml
@@ -1,6 +1,6 @@
 .Single-container
   .Single-header
-    %img.logo{:alt => "FURIMA", :src => "/logo.png"}/
+    %img.logo{alt: "FURIMA", src: "/logo.png"}
     %nav.Signup-bar
       %ol.clearfix
         %li.active
@@ -23,8 +23,8 @@
             会員登録が完了しました。
         .l-single-content
           = link_to("トップページ", root_path, {class: "nav-link"})
-        %img.image{:src => "material/pict/bg-mainVisual-pict_pc.jpg"}/
+        %img.image{src: "material/pict/bg-mainVisual-pict_pc.jpg"}
   %footer.single-footer
-    %a.single-footer-logo{:href => "#"}
-      %img.logo-white{:alt => "furima", :height => "65", :src => "/logo-white.png", :width => "80"}/
+    %a.single-footer-logo{href: "#"}
+      %img.logo-white{alt: "furima", src: "/logo-white.png"}
     .small © FURIMA
