--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,6 @@
 .Single-container
   .Single-header
-    %img.logo{:alt => "FURIMA", :src => "/logo.png"}/
+    %img.logo{alt: "FURIMA", src: "/logo.png"}
     %nav.Signup-bar
       %ol.clearfix
         %li.active
@@ -15,57 +15,57 @@
   .Single
     .Single__main
       .Single__main__container 発送元・お届け先住所入力
-      .Form-container{:action => "#", :method => "POST", :novalidate => "novalidate"}
-        %input{:name => "#", :type => "hidden", :value => ""}/
+      .Form-container{action: "#", method: "POST", novalidate: "novalidate"}
+        %input{name: "#", type: "hidden", value: ""}
         .Form
           .Form__group
             %label お名前(全角)
             %span.form-require 必須
             %br
             .form-name
-              %input.input-default-half{:name => "family_name", :placeholder => "例) 山田", :type => "text", :value => ""}/
-              %input.input-default-half{:name => "first_name", :placeholder => "例) 太郎", :type => "text", :value => ""}/
+              %input.input-default-half{name: "family_name", placeholder: "例) 山田", type: "text", value: ""}
+              %input.input-default-half{name: "first_name", placeholder: "例) 太郎", type: "text", value: ""}
           .Form__group
             %label お名前カナ(全角)
             %span.form-require 必須
             %br
             .form-name
-              %input.input-default-half{:name => "family_name_kana", :placeholder => "例) ヤマダ", :type => "text", :value => ""}/
-              %input.input-default-half{:name => "first_name_kana", :placeholder => "例) タロウ", :type => "text", :value => ""}/
+              %input.input-default-half{name: "family_name_kana", placeholder: "例) ヤマダ", type: "text", value: ""}
+              %input.input-default-half{name: "first_name_kana", placeholder: "例) タロウ", type: "text", value: ""}
           .Form__group
-            %label{:for => "postcode"} 郵便番号
+            %label{for: "postcode"} 郵便番号
             %span.form-require 必須
             %br
-            %input.input-default{:name => "postcode", :placeholder => "例) 123-4567", :type => "text", :value => ""}/
+            %input.input-default{name: "postcode", placeholder: "例) 123-4567", type: "text", value: ""}
           .Form__group
-            %label{:for => "prefecture"} 都道府県
+            %label{for: "prefecture"} 都道府県
             %span.form-require 必須
             %br
-            %input.input-default{:name => "prefecture", :placeholder => "例) 東京都", :type => "text", :value => ""}/
+            %input.input-default{name: "prefecture", placeholder: "例) 東京都", type: "text", value: ""}
           .Form__group
-            %label{:for => "city"} 市区町村
+            %label{for: "city"} 市区町村
             %span.form-require 必須
             %br
-            %input.input-default{:name => "city", :placeholder => "例) 横浜市緑区", :type => "text", :value => ""}/
+            %input.input-default{name: "city", placeholder: "例) 横浜市緑区", type: "text", value: ""}
           .Form__group
-            %label{:for => "city_number"} 番地
+            %label{for: "city_number"} 番地
             %span.form-enquire 任意
             %br
-            %input.input-default{:name => "city_number", :placeholder => "例) 青山1-1-1", :type => "text", :value => ""}/
+            %input.input-default{name: "city_number", placeholder: "例) 青山1-1-1", type: "text", value: ""}
           .Form__group
-            %label{:for => "remarks"} 建物名
+            %label{for: "remarks"} 建物名
             %span.form-enquire 任意
             %br
-            %input.input-default{:name => "remarks", :placeholder => "例) 柳ビル103", :type => "text", :value => ""}/
+            %input.input-default{name: "remarks", placeholder: "例) 柳ビル103", type: "text", value: ""}
           .Form__group
-            %label{:for => "phone_number"} 電話
+            %label{for: "phone_number"} 電話
             %span.form-enquire 任意
             %br
-            %input.input-default{:name => "phone_number", :placeholder => "例) 09012345678", :type => "text", :value => ""}/
+            %input.input-default{name: "phone_number", placeholder: "例) 09012345678", type: "text", value: ""}
             .has-error-text ※ 本人情報は正しく入力してください。
         .l-single-content
-          %button.btn-default{:type => "submit"} 登録する
+          %button.btn-default{type: "submit"} 登録する
   %footer.single-footer
-    %a.single-footer-logo{:href => "#"}
-      %img.logo-white{:alt => "furima", :src => "/logo-white.png"}/
+    %a.single-footer-logo{href: "#"}
+      %img.logo-white{alt: "furima", src: "/logo-white.png"}/
     .small © FURIMA
