--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,2 +1,6 @@
 %h1 Items#index
-%p Find me in app/views/items/index.html.erb
+= link_to new_user_path(), class: "account__btn" do
+  ユーザー登録ページ
+%br
+= link_to new_product_path(), class: "account__btn" do
+  商品登録ページ
