--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,6 @@
 .Single-container
   .Single-header
-    = image_tag("/logo.png", {class: "logo"})
+    = image_tag("/material/logo/logo.png", {class: "logo"})
     %nav.Signup-bar
       %ol.clearfix
         %li.active
