--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -2,6 +2,6 @@
 = render "header"
 = render "main"
 = render "footer"
-= link_to "#", class: "sellBtn" do
+= link_to "products#new", class: "sellBtn" do
   %span.sellBtn__text 出品する
   = image_tag "/material/icon/icon_camera.png", class: "sellBtn__image"
