商品詳細ページ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "modules/products";
 @import "modules/users";
 @import "modules/new_products";
+@import "modules/show_products";
 @import "font-awesome-sprockets";
 @import "font-awesome";
