--- a/app/assets/stylesheets/modules/_new_products.scss
+++ b/app/assets/stylesheets/modules/_new_products.scss
@@ -24,6 +24,19 @@
   border-radius: 6px;
 }
 
+@mixin selectarea{
+  width: 652px;
+  margin: 8px 0 8px 0;
+  height: 70px;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  line-height: 1.5;
+  font-size: 16px;
+
+}
+
 
 .Window{
   background-color: #F5F5F5;
@@ -140,7 +153,7 @@
     }
     &__ProductDetail{
       @include Formbox();
-      height: 540px;
+      height: 650px;
       .option{
         margin: 0 0 0 8px;
         padding: 2px 4px;
@@ -149,11 +162,36 @@
         color: #fff;
         font-size: 12px;
       }
-      
+      input.input--field{
+        width: 100%;
+        margin: 8px 0 8px 0;
+        height: 48px;
+        padding: 10px 16px 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 16px;
+      }
+      select.input--selectarea{
+        @include selectarea();
+      }
+      select#product_status_id{
+        @include selectarea();
+      }
     }
     &__ProductDelivery{
       @include Formbox();
       height: 550px;
+      select#product_delivery_id{
+        @include selectarea();
+      }
+      select#product_region_id{
+        @include selectarea();
+      }
+      select#product_day_id{
+        @include selectarea();
+      }
     }
     &__ProductPrice{
       margin-left: 50px;
@@ -228,7 +266,7 @@
   font-size: 12px;
 }
 
-.input--field{
+input.input--field{
   width: 100%;
   margin: 8px 0 8px 0;
   height: 48px;
@@ -240,18 +278,6 @@
   font-size: 16px;
 }
 
-.input--selectarea{
-  width: 652px;
-  margin: 8px 0 8px 0;
-  height: 70px;
-  padding: 10px 16px 8px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
-
-}
 
 .ItemInfo{
   margin-bottom: 20px;
