--- a/app/assets/stylesheets/modules/_new_products.scss
+++ b/app/assets/stylesheets/modules/_new_products.scss
@@ -24,6 +24,19 @@
   border-radius: 6px;
 }
 
+@mixin selectarea{
+  width: 652px;
+  margin: 8px 0 8px 0;
+  height: 70px;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  line-height: 1.5;
+  font-size: 16px;
+
+}
+
 
 .Window{
   background-color: #F5F5F5;
@@ -50,30 +63,24 @@
         font-size: 12px;
       }
       .ImageField{
+        overflow: hidden;
         width: 650px;
         display: flex;
-        overflow: hidden;
         .PreviewBox{
+          .js-file_group{
+            .js-file{
+              display: none;
+            }
+          }
           .Preview{
             display: flex;
-            max-width: 100%;
-            max-height: 200px;
-            margin-right: 6.5px;
-            position: relative;
-            .image--box{
-              img{
-                width: 121.5px;
-                height: 150px;
-                margin-right: 6.5px;
-                border: 1px solid black;
-                display: block;
-              }
+            img{
+              margin-right: 10px;
             }
-            p.delete--btn{
+            .js-remove{
               cursor : pointer;
               font-size: 15px;
               padding-top: 2px;
-              position: absolute;
               width: 121.5px;
               height: 30px;
               bottom: -5px;
@@ -101,21 +108,14 @@
               top: 50%;
               left: 45%;
             }
-            p.letter{
-              font-size: 9px;
+            #LetterMessage{
               position: absolute;
-              top: 95px;
-              left: 200px;
+              bottom: 10%;
+              left: 32%;
+              p{
+                font-size: 9px; 
+              }
             }
-            p.letter2{
-              font-size: 9px;
-              position: absolute;
-              top: 110px;
-              left: 200px;
-            }
-          }
-          #hidden-field{
-            display: none;
           }
         }
       }
@@ -140,7 +140,7 @@
     }
     &__ProductDetail{
       @include Formbox();
-      height: 540px;
+      height: 650px;
       .option{
         margin: 0 0 0 8px;
         padding: 2px 4px;
@@ -149,11 +149,36 @@
         color: #fff;
         font-size: 12px;
       }
-      
+      input.input--field{
+        width: 100%;
+        margin: 8px 0 8px 0;
+        height: 48px;
+        padding: 10px 16px 8px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+        background: #fff;
+        line-height: 1.5;
+        font-size: 16px;
+      }
+      select.input--selectarea{
+        @include selectarea();
+      }
+      select#product_status_id{
+        @include selectarea();
+      }
     }
     &__ProductDelivery{
       @include Formbox();
       height: 550px;
+      select#product_delivery_id{
+        @include selectarea();
+      }
+      select#product_region_id{
+        @include selectarea();
+      }
+      select#product_day_id{
+        @include selectarea();
+      }
     }
     &__ProductPrice{
       margin-left: 50px;
@@ -228,7 +253,7 @@
   font-size: 12px;
 }
 
-.input--field{
+input.input--field{
   width: 100%;
   margin: 8px 0 8px 0;
   height: 48px;
@@ -240,18 +265,6 @@
   font-size: 16px;
 }
 
-.input--selectarea{
-  width: 652px;
-  margin: 8px 0 8px 0;
-  height: 70px;
-  padding: 10px 16px 8px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background: #fff;
-  line-height: 1.5;
-  font-size: 16px;
-
-}
 
 .ItemInfo{
   margin-bottom: 20px;
