--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,10 @@
 @import "reset";
 @import "modules/products";
 @import "modules/users";
+@import "modules/logout_users";
+@import "modules/show_users";
 @import "modules/new_products";
+@import "modules/new_creditcards";
+@import "modules/show_creditcards";
 @import "font-awesome-sprockets";
 @import "font-awesome";
