商品購入ページ

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,5 +3,6 @@
 @import "modules/users";
 @import "modules/new_products";
 @import "modules/show_products";
+@import "modules/orders";
 @import "font-awesome-sprockets";
 @import "font-awesome";
