--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -13,55 +13,55 @@
     .mypage__list
       %ul.mypage__list--navi
         %li
-          %a.mypage-nav-list-item.active{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             マイページ
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             やることリスト
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             いいね！一覧
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品する
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+         =link_to "#",class:"mypage-nav-list-item" do
             出品した商品 - 出品中
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品した商品 - 取引中
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品した商品 - 売却済み
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             購入した商品 - 取引中
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             購入した商品 - 過去の取引
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             ログアウト
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+         =link_to "#",class:"mypage-nav-list-item" do
             クレジットカードの切り替え
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             評価一覧
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             お問い合わせ
             %i.icon-arrow-righ
     
