--- a/app/views/creditcards/show.html.haml
+++ b/app/views/creditcards/show.html.haml
@@ -13,55 +13,55 @@
     .mypage__list
       %ul.mypage__list--navi
         %li
-          %a.mypage-nav-list-item.active{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             マイページ
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             やることリスト
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             いいね！一覧
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品する
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品した商品 - 出品中
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品した商品 - 取引中
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             出品した商品 - 売却済み
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             購入した商品 - 取引中
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             購入した商品 - 過去の取引
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             ログアウト
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "http://localhost:3000/creditcards/new"}
+          =link_to "#",class:"mypage-nav-list-item" do
             クレジットカードの追加
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             クレジットカードの取り消し
             %i.icon-arrow-right
         %li
-          %a.mypage-nav-list-item{href: "#"}
+          =link_to "#",class:"mypage-nav-list-item" do
             評価一覧
             %i.icon-arrow-right
     
@@ -73,7 +73,7 @@
       .creditcard__btn
         = form_tag( method: :post, id: '#',  name: "inputForm") do
           %input{ type: "hidden", name: "card_id", value: "",class:"creditcard__show" }
-          %button.creditcard__btn--img{:type => "submit"} 削除する
+          %button.creditcard__btn--img{ type:"submit"} 削除する
 
 .footer
   .footer__contents
