ユーザー登録機能

--- a/app/views/products/_topbar.html.haml
+++ b/app/views/products/_topbar.html.haml
@@ -14,7 +14,8 @@
         %li.topbar__lists--left
           = link_to "ブランド", "#", class: "top-brand"
       .topbar__bottom--right
-        = link_to "#", class: "top-login" do
-          ログイン
-        = link_to "#", class: "top-newResister" do
-          新規登録
+        - if user_signed_in?
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "top-newResister"
+        - else
+          = link_to "ログイン", new_user_session_path, class: "top-login"
+          = link_to "新規登録", new_user_registration_path, class: "top-newResister"
