--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -1,9 +1,6 @@
 * {
   box-sizing: border-box;
 }
-.label{
-  font-weight: 600;
-}
 
 .Single-container{
   position: relative;
@@ -62,6 +59,7 @@
       margin: 0 auto;
       background-color: white;
       &__container{
+        font-weight: bold;
         font-size: 22px;
         padding: 32px;
         text-align: center;
@@ -69,60 +67,61 @@
       } 
       .Form-container{
         padding: 24px 16px 40px;
-        .Form{
+        .new_user{
           max-width: 343px;
           margin: 0 auto;
-          &__group{
-            margin: 24px 0 0;
-            .form-require{
-              margin: 0 0 0 8px;
-              padding: 2px 4px;
-              background: #3CCACE;
-              border-radius: 2px;
-              color: #fff;
-              font-size: 12px;
+          .FormField{
+            margin: 10px 0 0;
+            &__label--normal{
+              font-weight: 600;
+              .form-require{
+                margin: 0 0 0 8px;
+                padding: 2px 4px;
+                background: #3CCACE;
+                border-radius: 2px;
+                color: #fff;
+                font-size: 12px;
+              }
+              .form-enquire{
+                margin: 0 0 0 8px;
+                padding: 2px 4px;
+                background: #ccc;
+                border-radius: 2px;
+                color: #fff;
+                font-size: 12px;
+              }
             }
-            .form-enquire{
-              margin: 0 0 0 8px;
-              padding: 2px 4px;
-              background: #ccc;
-              border-radius: 2px;
-              color: #fff;
-              font-size: 12px;
+            &__input--normal{
+              input{
+                width: 100%;
+                margin: 8px 0 8px 0;
+                height: 48px;
+                padding: 10px 16px 8px;
+                border-radius: 4px;
+                border: 1px solid #ccc;
+                background: #fff;
+                line-height: 1.5;
+                font-size: 16px;
+              }
+              select{
+                width: 100%;
+                margin: 8px 0 8px 0;
+                height: 48px;
+                padding: 10px 16px 8px;
+                border-radius: 4px;
+                border: 1px solid #ccc;
+                background: #fff;
+                line-height: 1.5;
+                font-size: 16px;
+              }
             }
-            .input-default{
-              width: 100%;
-              margin: 8px 0 8px 0;
-              height: 48px;
-              padding: 10px 16px 8px;
-              border-radius: 4px;
-              border: 1px solid #ccc;
-              background: #fff;
-              line-height: 1.5;
-              font-size: 16px;
-            }
-            .form-info-text{
-              margin: 8px 0 0;
-              line-height: 1.5;
-              color: #888;
-            }
-            .text-left{
-              font-size: 16px;
-            }
-            .l-single-text{
-              margin: 8px 0 0;
-            }
-            .form-name{
-              display: flex;
-              justify-content: space-between;
-              margin: 8px 0 8px 0;
-              .input-default-half{
+            .FormField-half{
+              input{
+                margin-top: 8px;
                 width: calc(50% - 6px);
                 height: 48px;
                 padding: 10px 16px 8px;
                 border: 1px solid #ccc;
-                background: #fff;
-                line-height: 1.5;
                 font-size: 16px;
               }
             }
@@ -133,9 +132,9 @@
               .select-wrap{
                 width: 76px;
                 height: 30px;
-                select{
+                .select-default{
                   height: 48px;
-                  width: 80px;
+                  width: 85px;
                   border: 1px solid #ccc;
                   padding: 0 10px;
                 }
@@ -148,7 +147,8 @@
               color: #888;
             }
           }
-          &__complete{
+          .Form__complete{
+            line-height: 2em;
             padding-bottom: 40px;
             font-size: 16px;
             display: flex;
@@ -159,7 +159,7 @@
           display: flex;
           justify-content: center;
           margin-top: 10px;
-          button{
+          .btn-default{
             background: #3CCACE;
             border: 1px solid #3CCACE;
             color: #fff;
