--- a/app/assets/stylesheets/modules/_new_products.scss
+++ b/app/assets/stylesheets/modules/_new_products.scss
@@ -41,7 +41,7 @@
 .Window--new{
   background-color: #F5F5F5;
   width: 100vw;
-  height: 2700px;
+  height: 2900px;
   .Head{
     width: 100%;
     height: 130px;
@@ -122,7 +122,7 @@
     }
     &__ProductInfo{
       @include Formbox();
-      height: 500px;
+      height: 450px;
       position: relative;
       .input--textarea{
         width: 100%;
@@ -141,6 +141,9 @@
     &__ProductDetail{
       @include Formbox();
       height: 650px;
+      .listing-select-wrapper__box--select{
+        @include selectarea();
+      }
       .option{
         margin: 0 0 0 8px;
         padding: 2px 4px;
