--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -2,6 +2,11 @@
 = render "header"
 = render "main"
 = render "footer"
-= link_to new_product_path, class: "sellBtn" do
-  %span.sellBtn__text 出品する
-  = image_tag "/material/icon/icon_camera.png", class: "sellBtn__image"
+- if user_signed_in?
+  = link_to new_product_path, class: "sellBtn" do
+    %span.sellBtn__text 出品する
+    = image_tag "/material/icon/icon_camera.png", class: "sellBtn__image"
+- else 
+  = link_to new_user_session_path, class: "sellBtn" do
+    %span.sellBtn__text 出品する
+    = image_tag "/material/icon/icon_camera.png", class: "sellBtn__image"
