--- a/app/assets/stylesheets/modules/_show_users.scss
+++ b/app/assets/stylesheets/modules/_show_users.scss
@@ -1,115 +1,200 @@
-.header {
-  padding: 0 60px;
-  &__inside {
-    max-width: 1040px;
-    width: 100%;
-    min-height: 82px;
-    margin: 0 auto;
-    padding: 15px 0 0;
-    &--main {
-      position: relative;
-      display: flex;
-      align-items: center;
-      padding: 3px 0 0 0;
-      &__logo {
-        width: 140px;
-        font-size: 25px;
-        height: 30px;
-        padding-bottom: 10px;
-        margin-right: 30px;
-        border-radius: 4px;
-      }
-      &__box {
-        width: 70%;
-        height: 36px;
-        padding: 0 0 0 5px;
-      }
-      &__botan {
-        width: 10%;
-      }
-    }
-  }
-}
-.mypage {
-  margin: 40px auto 0;
-  width: 1020px;
-  display: flex;
-  &__list {
-    float: left;
-    width: 280px;
-    margin: 0 40px 0px 60px;
-    &--navi {
-      list-style: none;
-      .mypage-nav-list-item {
-        position: relative;
-        min-height: 30px;
-        background: #fff;
+.Mypage-header{
+  position: relative;
+  min-height: 100%;
+  background: #f5f5f5;
+  font-size: 14px;
+  color: #333;
+  line-height: 1;
+  .bread-crumbs{
+    height: 55px;
+    position: relative;
+    border-top: 1px solid #eee;
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.16);
+    background: #fff;
+    z-index: 1;
+    display: flex;
+    .Itemscop{
+      width: 1020px;
+      margin: 0 auto;
+      padding: 16px 0;
+      font-size: 14px;
+      line-height: 1.2;
+      text-decoration: none;
+      .bread-crumbs-item{
+        display: inline-block;
         font-size: 14px;
-        color: #333;
-        border: solid;
-        border-color: rgb(230, 225, 225);
-        width: 200px;
-        text-align: center;
-        text-decoration: none;
-        justify-content: center;
-        align-items: center;
-        height: 5px;
-        display: flex;
-        border-width: 1px;
-      }
-    }
-  }
-
-  &__bord {
-    float: right;
-    height: auto;
-    width: 700px;
-    &--user {
-      text-align: center;
-      height: 50%;
-      background-color:  #3CCACE;
-      position: relative;
-      &__name {
-        font-size: large;
-        white-space: nowrap;
-        text-align: center;
-        margin: 0 auto;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        width: 80%;
-        height: 3.2rem;
-        
-      }
-    }
-    &--item {
-      text-align: left;
-      padding: 0 20px;
-      line-height: 72px;
-      background-color: rgb(248, 245, 245);
-    }
-    &--now {
-      display: block;
-      display: flex;
-      justify-content: space-around;
-      background-color: #3ccace;
-      &__info {
-        display: block;
-        &--mains {
-          font-size: 22px;
-          color: rgb(248, 245, 245);
-          &__forms {
-            display: block;
-            color: #333;
-            font-size: 16px;
-            line-height: 72px;
-            color: white;
-          }
+        line-height: 1.2;
+        margin-left: 8px;
+        .unit{
+          text-decoration: none;
+          color: black;
         }
       }
     }
   }
 }
+
+.Mypage-main{
+font-size: 14px;
+background: #f5f5f5;
+height: 1580px;
+}
+
+.l-side{
+  margin: 0px auto 0;
+  width: 1020px;
+  padding-top: 40px;
+  &__list{
+    float: left;
+    width: 280px;
+    margin: 0 40px 0 0;
+    .mypage-nav{
+      display: block;
+      .mypage-nav-list{
+        display: block;
+        li{
+          display: list-item;
+          border-bottom: 1px solid #eee;
+          .mypage-nav-list-item{
+            position: relative;
+            display: block;
+            min-height: 40px;
+            padding: 14px;
+            background: #fff;
+            font-size: 14px;
+            color: #333;
+            text-decoration: none;
+            i{
+              position: absolute;
+              top: 50%;
+              right: 16px;
+              color: black;
+            }
+          }
+        }
+      }
+      .mypage-nav-head{
+        font-weight: bold;
+        margin: 40px 0 5px;
+        font-size: 16px;
+      }
+    }
+  }
+}
+
+
+// .header {
+//   padding: 0 60px;
+//   &__inside {
+//     max-width: 1040px;
+//     width: 100%;
+//     min-height: 82px;
+//     margin: 0 auto;
+//     padding: 15px 0 0;
+//     &--main {
+//       position: relative;
+//       display: flex;
+//       align-items: center;
+//       padding: 3px 0 0 0;
+//       &__logo {
+//         width: 140px;
+//         font-size: 25px;
+//         height: 30px;
+//         padding-bottom: 10px;
+//         margin-right: 30px;
+//         border-radius: 4px;
+//       }
+//       &__box {
+//         width: 70%;
+//         height: 36px;
+//         padding: 0 0 0 5px;
+//       }
+//       &__botan {
+//         width: 10%;
+//       }
+//     }
+//   }
+// }
+// .mypage {
+//   margin: 40px auto 0;
+//   width: 1020px;
+//   display: flex;
+//   &__list {
+//     float: left;
+//     width: 280px;
+//     margin: 0 40px 0px 60px;
+//     &--navi {
+//       list-style: none;
+//       .mypage-nav-list-item {
+//         position: relative;
+//         min-height: 30px;
+//         background: #fff;
+//         font-size: 14px;
+//         color: #333;
+//         border: solid;
+//         border-color: rgb(230, 225, 225);
+//         width: 200px;
+//         text-align: center;
+//         text-decoration: none;
+//         justify-content: center;
+//         align-items: center;
+//         height: 5px;
+//         display: flex;
+//         border-width: 1px;
+//       }
+//     }
+//   }
+
+//   &__bord {
+//     float: right;
+//     height: auto;
+//     width: 700px;
+//     &--user {
+//       text-align: center;
+//       height: 50%;
+//       background-color:  #3CCACE;
+//       position: relative;
+//       &__name {
+//         font-size: large;
+//         white-space: nowrap;
+//         text-align: center;
+//         margin: 0 auto;
+//         position: absolute;
+//         top: 0;
+//         right: 0;
+//         bottom: 0;
+//         left: 0;
+//         margin: auto;
+//         width: 80%;
+//         height: 3.2rem;
+        
+//       }
+//     }
+//     &--item {
+//       text-align: left;
+//       padding: 0 20px;
+//       line-height: 72px;
+//       background-color: rgb(248, 245, 245);
+//     }
+//     &--now {
+//       display: block;
+//       display: flex;
+//       justify-content: space-around;
+//       background-color: #3ccace;
+//       &__info {
+//         display: block;
+//         &--mains {
+//           font-size: 22px;
+//           color: rgb(248, 245, 245);
+//           &__forms {
+//             display: block;
+//             color: #333;
+//             font-size: 16px;
+//             line-height: 72px;
+//             color: white;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
