--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -9,6 +9,7 @@
   color: #333;
   background: #f5f5f5;
   line-height: 1;
+  display: block;
   .Single-header{
     height: 120px;
     display: flex;
