スプリントレビュー②回目

--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -30,5 +30,5 @@
     .Warning--for--purchase
       %p 支払い方法と配送先の入力を完了してください。
     .Purchase--btn
-      =link_to "購入する", product_orders_path(), class: "purchase"
+      =link_to "購入する", root_path, class: "purchase"
 =render "products/footer"
