--- a/app/views/products/_main.html.haml
+++ b/app/views/products/_main.html.haml
@@ -70,7 +70,7 @@
     新規投稿商品
   .mainCategory__wrapper
     .Products
-      = image_tag "/material/pict/pict-reason-01.jpg", class: "CategoryPic"
+      = link_to image_tag("/material/pict/pict-reason-01.jpg", class:"CategoryPic"), "products/show"
       .Products__info
         %p.name ee
         .price
