カード登録機能

--- a/app/views/orders/create.html.haml
+++ b/app/views/orders/create.html.haml
@@ -14,3 +14,15 @@
           = link_to "トップページ", root_path, class: "nav-link-order", id: "top-page-link"
           = link_to "マイページ", root_path, class: "nav-link-order"
         = image_tag("/material/pict/bg-mainVisual-pict_pc.jpg", {class: "image"})
+
+-# .pay
+-#   .main_contents
+-#     .main_details
+-#       .main_details__message
+-#         購入が完了しました。
+-#     = render "purchases/shared/purchase_product_info.html.haml", product: @product, images: @images
+-#     %ul.purchased__links
+-#       %li.purchased__links__TopPage
+-#         = link_to "トップページに戻る", root_path, class: "purchased__links__TopPage__btn"
+-#       %li.purchased__links__index
+-#         = link_to "購入商品一覧", "#", class: "purchased__links__index__btn"
