--- a/app/views/card/destroy.html.haml
+++ b/app/views/card/destroy.html.haml
@@ -1,7 +1,7 @@
 = render "card_header"
-.destoroy
-  .destoroy__frame
-    .destoroy__frame__message
+.Single
+  .Single__main
+    .chapter-head
       削除が完了しました。
     %ul.destoroy__frame__btns
       %li.credit_card_new_link
