--- a/app/views/products/_topbar.html.haml
+++ b/app/views/products/_topbar.html.haml
@@ -15,7 +15,8 @@
           = link_to "ブランド", "#", class: "top-brand"
       .topbar__bottom--right
         - if user_signed_in?
-          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "top-newResister"
+          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "top-login"
+          = link_to "マイページ", user_path(current_user.id), class: "top-newResister"
         - else
           = link_to "ログイン", new_user_session_path, class: "top-login"
           = link_to "新規登録", new_user_registration_path, class: "top-newResister"
