--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,103 +1,40 @@
-.body
-  .header
-    .header__inside
-      .header__inside--main
-        =image_tag '/material/logo/logo.png', alt: 'logo', class: 'header__inside--main__logo'  
-        .header__inside--main__box
-          = form_with class: 'header__inside--main__box--form', local: true do |f|
-            = f.text_field :keyword, class: 'header__inside--main__box--form__input', placeholder: 'キーワードから探す'
-            = button_tag type: 'submit', class: 'header__inside--main__box--form__submit' do
-              = image_tag "/material/icon/icon-search 1.png", class: "header__inside--main__box--form__submit--icon"
-
-  .mypage
-    .mypage__list
-      %ul.mypage__list--navi
+= render "products/topbar"
+= render "Mypage-header"
+.Mypage-main
+  = render "l-side"
+  .l-content
+    .mypage-user-icon
+      .background
+        = image_tag "/material/icon/member_photo_noimage_thumb.png", class: "icon"
+      .user-name
+        = current_user.name
+      .mypage-number
+        %div
+          評価
+          %span.bold 0
+        %div
+          出品数
+          %span.bold 0
+    %section.mypage-tab
+      %ul.mypage-tab-container
+        %li.active
+          %h3 お知らせ
+      %ul.mypage-tab-container
         %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            マイページ
-            %i.icon-arrow-right
+          %h3 やることリスト
+    %section.mypage-container
+      %h2.mypage-tab-head 購入した商品
+      %ul.mypage-tabs
+        %li.active
+          %h3
+            取引中
         %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            やることリスト
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            いいね！一覧
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            出品する
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            出品した商品 - 出品中
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            出品した商品 - 取引中
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            出品した商品 - 売却済み
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            購入した商品 - 取引中
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            購入した商品 - 過去の取引
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            ログアウト
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            クレジットカードの切り替え
-            %i.icon-arrow-right
-        %li
-          =link_to "#",class:"mypage-nav-list-item" do
-            評価一覧
-            %i.icon-arrow-right
-        %li
-          %a.mypage-nav-list-item{href: "#"}
-            お問い合わせ
-            %i.icon-arrow-right
-
-    .mypage__bord
-      .mypage__bord--user 
-        .mypage__bord--user__name
-          ログイン中のユーザー
-      .mypage__bord--item 
-        購入した商品
-      %ul.mypage__bord--now 
-        %li.mypage__bord--now__info
-          %h3.mypage__bord--now__info--mains
-            = link_to "取引中","#", class:"mypage__bord--now__info--main__forms"
-        %li.mypage__bord--now__info
-          %h3.mypage__bord--now__info--mains
-            = link_to "過去の取引","#", class:"mypage__bord--now__info--main__forms"
-
-.footer
-  .footer__contents
-    .content
-      .h2.content__head FURIMAについて
-      = link_to "会社概要（運営会社）", "#", class: "content__text"
-      = link_to "プライバシーポリシー", "#", class: "content__text"
-      = link_to "FURIMA利用規約", "#", class: "content__text"
-      = link_to "ポイントに関する特約", "#", class: "content__text"
-
-    .content
-      .h2.content__head FURIMAを見る
-      = link_to "カテゴリー一覧", "#", class: "content__text"
-      = link_to "ブランド一覧", "#", class: "content__text"
-
-    .content
-      .h2.content__head ヘルプ＆ガイド
-      = link_to "FURIMAガイド", "#", class: "content__text"
-      = link_to "FURIMAロゴ利用ガイドライン", "#", class: "content__text"
-      = link_to "お知らせ", "#", class: "content__text"
-
-  = image_tag "/material/logo/logo-white.png", class: "footer__logo"
-  %p.footer__name ©︎FURIMA
+          %h3
+            過去の取引
+      .tab-content
+        %ul#mypage-tab-transaction-now
+          %li.mypage-item-not-found 取引中の商品がありません
+= render "products/footer"
+= link_to new_product_path, class: "sellBtn" do
+  %span.sellBtn__text 出品する
+  = image_tag "/material/icon/icon_camera.png", class: "sellBtn__image"
