--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -2,7 +2,7 @@
   .Head
     = image_tag '/material/logo/logo.png', alt: 'logo', class: 'logo-furima'
   .FormBox
-    = form_with model: @product, url: {controller: 'products', action: 'create' }, class:"FormBox--form", local: true do |f|
+    = form_with model: @product, url: {controller: 'products', action: 'update' }, class:"FormBox--form", local: true do |f|
       .FormBox__ImageForm
         .ItemInfo
           %label.item_name 出品画像
@@ -13,11 +13,20 @@
             .Preview
               #image-box
                 #Previews
+                  - if @product.persisted?
+                    - @product.images.each_with_index do |image, i|
+                      = image_tag image.src.url, data: { index: i }, width: "100", height: '100'
                   #For_DeleteBtn
                     = f.fields_for :images do |image|
                       .js-file_group{"data-index" => "#{image.index}"}
                         = image.file_field :src, class: 'js-file'
                         %br/
+                        %p.js-remove 削除
+                      - if @product.persisted?
+                        = image.check_box :_destroy, data:{ index: image.index }, class: 'hidden-destroy'
+                    - if @product.persisted?
+                      .js-file_group{"data-index" => "#{@product.images.count}"}
+                        = file_field_tag :src, name: "product[images_attributes][#{@product.images.count}][src]", class: 'js-file'
           .ImagePlace
             .DropArea
               =icon('fas', 'camera', class: "camera")
@@ -33,12 +42,18 @@
           %label.item_name 商品の説明
           %span.require 必須
         = f.text_area :item_info, class: "input--textarea", placeholder: "商品の説明(色、素材、重さ、定価、注意点など)"
-      .FormBox__ProductDetail
+      .FormBox__ProductDetail__EDIT
         .ItemInfo
           %label.item_name カテゴリー
           %span.require 必須
         .listing-product-detail__category
           = f.select :category, @category_parent_array, {}, class: "listing-select-wrapper__box--select", id: "parent_category"
+          .listing-select-wrapper__added{id: "children_wrapper"}
+            .listing-select-wrapper__box#For_Edit_Select_Child
+              = f.select :category_id, options_for_select(@category_child_array.map{|c|[c[:name], c[:id], {'data-category'=>c[:id]}]}, @product.category.parent.id), {}, {class: "listing-select-wrapper__box--select", id: "child_category"}
+          .listing-select-wrapper__added{id: "#grandchildren_wrapper"}
+            .listing-select-wrapper__box#For_Edit_Select
+              = f.select :category_id, options_for_select(@category_grandchild_array.map{|c|[c[:name], c[:id], {'data-category'=>c[:id]}]}, @product.category.id), {}, {class: "listing-select-wrapper__box--select", id: "grandchild_category"}
         .ItemInfo
           %label.item_name ブランド
           %span.option 任意
@@ -77,8 +92,11 @@
           %p.yen ¥
           = f.text_field :price, class: "input--price", placeholder: "0"
       .FormBox__Submit
-        = f.submit "出品する", class: "SubmitBtn"
+        = f.submit "更新する", class: "SubmitBtn"
+      .DeleteBtn
+        #ProdcutDelete
+          = link_to '商品を削除する', product_path(@product.id), method: :delete
       .ReturnBtn
-        = link_to "もどる", ":back", class: "backto"
+        = link_to "もどる", product_path(@product.id), class: "backto"
       .Warning
         %p 禁止されている行為および出品物を必ずご確認ください。偽ブランド品や盗品物などの販売は犯罪であり、法律により処罰される可能性があります。 また、出品をもちまして加盟店規約に同意したことになります。
