--- a/app/assets/stylesheets/modules/_card.scss
+++ b/app/assets/stylesheets/modules/_card.scss
@@ -150,3 +150,16 @@
     }
   }
 } 
+
+#LinkBtn{
+  display: block;
+  text-align: center;
+  line-height: 60px;
+  background: #3CCACE;
+  border: 1px solid #3CCACE;
+  color: #fff;
+  height: 60px;
+  width: 343px;
+  margin: 0 auto;
+  border-radius: 6px;
+}
