--- a/app/views/card/destroy.html.haml
+++ b/app/views/card/destroy.html.haml
@@ -5,5 +5,5 @@
       削除が完了しました。
     %ul.form-tag
       %li.add
-        = link_to "クレジットカード新規登録", new_card_path, class: "token-submit"
+        = link_to "クレジットカード新規登録", new_card_path, class: "token-submit", id: "LinkBtn"
 = render "card_footer" 
