--- a/app/views/orders/create.html.haml
+++ b/app/views/orders/create.html.haml
@@ -1,6 +1,6 @@
 .Single-container
   .Single-header
-    = image_tag("/material/logo/logo.png", {class: "logo"})
+    = link_to (image_tag "/material/logo/logo.png", alt: 'logo', class: "logo"), root_path
   .Single
     .Single__main
       .Single__main__container 商品購入完了
