--- a/app/views/orders/pay.html.haml
+++ b/app/views/orders/pay.html.haml
@@ -1,6 +1,6 @@
 .Window
   .Head
-    =image_tag '/material/logo/logo.png', alt: 'logo', class: 'logo-furima'
+    = link_to (image_tag "/material/logo/logo.png", alt: 'logo', class: "logo-furima"), root_path
   .FormBox
     .Confirmation
       %h2 購入が完了しました。
