--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -24,6 +24,6 @@
       = link_to "FURIMAガイド", "#", class: "content__text"
       = link_to "FURIMAロゴ利用ガイドライン", "#", class: "content__text"
       = link_to "お知らせ", "#", class: "content__text"
-
-  = image_tag "/material/logo/logo-white.png", class: "footer__logo"
+  
+  = link_to (image_tag "/material/logo/logo-white.png", class: "footer__logo"), root_path
   %p.footer__name ©︎FURIMA
