--- a/app/views/users/_users_footer.html.haml
+++ b/app/views/users/_users_footer.html.haml
@@ -1,5 +1,5 @@
 %footer.single-footer
   .single-footer-logo
-    = link_to image_tag("/material/logo/logo-white.png", class:"logo-white"), "root_path"
+    = link_to (image_tag "/material/logo/logo-white.png", class: "footer__logo"), root_path
   .small 
     .small-font © FURIMA
