--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -90,5 +90,6 @@
       = link_to "FURIMAロゴ利用ガイドライン", "#", class: "content__text"
       = link_to "お知らせ", "#", class: "content__text"
 
-  = image_tag "/material/logo/logo-white.png", class: "footer__logo"
+
+  = link_to (image_tag "/material/logo/logo-white.png", class: "footer__logo"), root_path
   %p.footer__name ©︎FURIMA.
